# Walk-on-Probes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddLibrary.cmake  CompDB.cmake  FindOpenMPCustom.cmake
configs/: hc.json  mvc.json  wop.json  wopc.json  wost.json
core/: CMakeLists.txt
core/include/core/: core_api.h  green.hpp  macros.h  math_defs.hpp  poisson_kernel.hpp  sample.hpp  sampling_green.hpp  sampling_poisson_kernel.hpp  sampling_uniform.hpp  scalar.hpp  vector.hpp
data/exp_scenes/2d_0_ladybug/: boundary.txt  config.json  gt_256_256.txt
data/exp_scenes/2d_1_engine/: boundary.txt  gt_512_512.txt
data/exp_scenes/2d_2_lock_2/: boundary.txt  comment.txt  config.json  gt_512_512.txt
data/exp_scenes/2d_3_almost_neumann/: boundary.txt  comment.txt  gt_512_512_verification.txt
data/exp_scenes/2d_4_clover/: boundary.txt  comment.txt  gt_512_512.txt
data/exp_scenes/2d_5_conical_flask/: boundary.txt  comment.txt  config.json  gt_1024_1024.txt  gt_512_512.txt
data/exp_scenes/3d_0_gear/: boundary.txt  comment.txt  config.json  gt_512_512.txt  mesh.mtl
data/exp_scenes/3d_1_bunny/: boundary.txt  comment.txt  config.json  gt_512_512.txt  mesh.mtl
data/exp_scenes/3d_2_spot_2/: boundary.txt  comment.txt  config.json  gt_512_512.txt
data/objs/2d_almost_neumann/: boundary.txt
data/objs/2d_complex_test/: boundary.txt  config.json
data/objs/2d_dirichlet_test/: gt_256_256.txt  gt_512_512.txt
data/objs/2d_leak_test/: boundary.txt
data/objs/2d_leak_test_2/: boundary.txt
data/objs/2d_leak_test_3/: boundary.txt  config.json
data/objs/2d_neumann_test/: config.json  gt_256_256.txt
data/objs/2d_neumann_test_no_source/: gt_256_256.txt
data/objs/2d_polygon_fish/: boundary.txt
data/objs/2d_screened_dirichlet_test/: boundary.txt
data/objs/2d_screened_neumann_test/: boundary.txt  config.json
data/objs/2d_simplest/: boundary.txt
data/objs/3d_leak_test/: boundary.txt  config.json  mesh.mtl
demo/: CMakeLists.txt  debug_wost.cpp  main.cpp
scene/: CMakeLists.txt
scene/include/scene/: analytical_scene.hpp  obj_scene.hpp  poisson.hpp  scene_api.h
scene/src/: analytical_scene.cpp  obj_scene.cpp  poisson.cpp
solver/: CMakeLists.txt
solver/include/solver/: caching_solver.hpp  hc_solver.hpp  mvc_solver.hpp  probe.hpp  probe_set.hpp  solver.hpp  solver_api.h  walk_path.hpp  wop_caching_solver.hpp  wop_solver.hpp  wos_solver.hpp  wost_solver.hpp
solver/src/: hc_solver.cpp  kd_tree.hpp  mvc_solver.cpp  probe_set.cpp  probe_tree.hpp  solver.cpp  walk.hpp  wop_caching_solver.cpp  wop_solver.cpp  wos_solver.cpp  wost_solver.cpp
test/: CMakeLists.txt  test_probe.cpp  test_sampling.cpp  test_scalar.cpp
